Establish OIDC authentication and Next.js BFF (#55)
* feat(auth): establish OIDC BFF foundation

* fix(infra): run Flyway migration command

* fix(ui): track BFF title routes

* fix(auth): deserialize OIDC principals from JDBC

* fix(ui): log OIDC callback failures safely

* chore(ui): classify OIDC callback failures safely

* fix(ui): redeem OIDC codes with public callback URI

* chore(ui): classify OIDC refresh failures safely

* chore(ui): log OIDC token endpoint status safely

* fix(ui): preserve OIDC refresh grant requests

* chore(ui): report OIDC token endpoint failures safely

* chore(ui): trace OIDC token request metadata safely

* fix(auth): support refresh-token authorization metadata

* chore(ui): remove OIDC refresh diagnostics

* fix(auth): harden OIDC BFF persistence boundaries

* fix(terraform): avoid OCI digest secret false positive

* chore(ci): recheck dismissed GitGuardian finding

* chore(auth): remove completed OIDC migration artifacts

* chore(data): remove unused PostgreSQL driver

* docs: explain OAuth persistence and local PostgreSQL access

Add an educational OAuth/OIDC persistence model and a localhost-only PostgreSQL port-forward task with pgAdmin connection guidance.

* refactor: clarify OIDC client reconciliation